--- a/source/SourcePath.cpp.in
+++ b/source/SourcePath.cpp.in
@@ -4,6 +4,6 @@
 //
 //////////////////////////////////////////////////////////////////////////////
 
-#include "shader.h"
+#include "SourcePath.h"
 
-std::string shader_path = "C:/Users/JT McDermott/Documents/GitHub/Tetris/shaders/";
+std::string source_path = "@MY_SOURCE_PATH@";
